Agentforce/force-app/main/default/objects/Lead/fields/Handed_Over_By__c.field-meta.xml
<CustomField>
    <fullName>Handed_Over_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User which Handed Over the Lead from Telemarketing to Sales</description>
    <label>Handed Over By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Telemarketing</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>