Agentforce/force-app/main/default/objects/Lead/fields/Handed_Over_Date__c.field-meta.xml
<CustomField>
    <fullName>Handed_Over_Date__c</fullName>
    <description>Date the Lead was Handed Over from Telemarketing to Sales</description>
    <label>Handed Over</label>
    <type>Date</type>
</CustomField>