Agentforce/force-app/main/default/objects/Lead/fields/Historical_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Historical_Next_Steps__c</fullName>
    <description>AD-60 Next steps</description>
    <label>Update History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>