Agentforce/force-app/main/default/objects/Lead/fields/InformalName__c.field-meta.xml
<CustomField>
    <fullName>InformalName__c</fullName>
    <label>Informal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>