Agentforce/force-app/main/default/objects/Lead/fields/Initial_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Attempt__c</fullName>
    <description>AD-48 - field to capture the date where an initial contact attempt has been made but been unsuccessful and the Lead is still open</description>
    <label>Last Initial Contact Attempt</label>
    <type>Date</type>
</CustomField>