Agentforce/force-app/main/default/objects/Lead/fields/Initial_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Date__c</fullName>
    <description>AD-44 - date field to capture the date initial contact was made</description>
    <label>Initial Contact Made</label>
    <type>Date</type>
</CustomField>