Agentforce/force-app/main/default/objects/Lead/fields/Key_Target__c.field-meta.xml
<CustomField>
    <fullName>Key_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify if the Lead is a key target, mapped to the Account upon conversion</description>
    <label>Key Target</label>
    <type>Checkbox</type>
</CustomField>