Agentforce/force-app/main/default/objects/Lead/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>AD-61 - date to capture when the last contact was made with the Client</description>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>