Agentforce/force-app/main/default/objects/Lead/fields/Last_Update_f__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_f__c</fullName>
    <formula>Latest_Update__r.Sales_Update__c</formula>
    <label>Last Update</label>
    <type>Text</type>
</CustomField>