Agentforce/force-app/main/default/objects/Lead/fields/Latest_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Latest_Next_Step__c</fullName>
    <label>Latest Next Step DEP</label>
    <type>DateTime</type>
</CustomField>