Agentforce/force-app/main/default/objects/Lead/fields/Latest_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Task_Due_Date__c</fullName>
    <description>Populated by DLRS</description>
    <label>Latest Task Due Date</label>
    <type>Date</type>
</CustomField>