Agentforce/force-app/main/default/objects/Lead/fields/Latest_Update__c.field-meta.xml
<CustomField>
    <fullName>Latest_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Update</label>
    <referenceTo>Sales_Update__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>