Agentforce/force-app/main/default/objects/Lead/fields/Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Description__c</fullName>
    <description>Lead Description- Data Dictionary Consolidation</description>
    <label>Lead Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>