Agentforce/force-app/main/default/objects/Lead/fields/LeadCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>LeadCaseSafeID__c</fullName>
    <description>Lead CaseSafeID</description>
    <formula>CASESAFEID(Id)</formula>
    <label>LeadCaseSafeID</label>
    <type>Text</type>
</CustomField>