Agentforce/force-app/main/default/objects/Lead/fields/Legacy__c.field-meta.xml
<CustomField>
    <fullName>Legacy__c</fullName>
    <label>Legacy</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>