Agentforce/force-app/main/default/objects/Lead/fields/Legacy_AS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AS_ID__c</fullName>
    <label>Legacy AS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>