Agentforce/force-app/main/default/objects/Lead/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <description>Id used on the Legacy System</description>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>