Agentforce/force-app/main/default/objects/Lead/fields/LID_LinkedIn_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>LID_LinkedIn_Company_Id__c</fullName>
    <description>LinkedIn Company Id- Data Dictionary Consolidation</description>
    <label>LinkedIn Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>