Agentforce/force-app/main/default/objects/Lead/fields/LID_LinkedIn_Member_Token__c.field-meta.xml
<CustomField>
    <fullName>LID_LinkedIn_Member_Token__c</fullName>
    <description>LinkedIn Member Token- Data Dictionary Consolidation</description>
    <label>LinkedIn Member Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>