Agentforce/force-app/main/default/objects/Lead/fields/Likelihood_of_Failure__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_of_Failure__c</fullName>
    <description>Likelihood of Failure- Data Dictionary Consolidation</description>
    <label>Likelihood of Failure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>