Agentforce/force-app/main/default/objects/Lead/fields/LinkedIn_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Industry_Code__c</fullName>
    <label>LinkedIn Industry Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>