Agentforce/force-app/main/default/objects/Lead/fields/LinkedIn_State__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_State__c</fullName>
    <label>LinkedIn State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>