Agentforce/force-app/main/default/objects/Lead/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-109 - checkbox to be used in the BANT validation</description>
    <inlineHelpText>Genuine need for the work to be completed.</inlineHelpText>
    <label>Need</label>
    <type>Checkbox</type>
</CustomField>