Agentforce/force-app/main/default/objects/Lead/fields/Next_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Date__c</fullName>
    <description>AD-61 - date to capture when the next contact should be made to the Client</description>
    <label>Next Contact Date</label>
    <type>Date</type>
</CustomField>