Agentforce/force-app/main/default/objects/Lead/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>AD-60 Next steps &quot;original&quot; field</description>
    <label>Next Steps DEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>