Agentforce/force-app/main/default/objects/Lead/fields/No_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>No_of_Activities__c</fullName>
    <formula>No_of_Tasks__c + No_of_Events__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>