Agentforce/force-app/main/default/objects/Lead/fields/No_of_Employees_Bracket__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees_Bracket__c</fullName>
    <description>Number of employees by bracket</description>
    <label>No of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 - 149</fullName>
            </value>
            <value>
                <fullName>1,000 - 4,999</fullName>
            </value>
            <value>
                <fullName>150 - 199</fullName>
            </value>
            <value>
                <fullName>200 - 499</fullName>
            </value>
            <value>
                <fullName>50 - 99</fullName>
            </value>
            <value>
                <fullName>500 - 999</fullName>
            </value>
            <value>
                <fullName>&lt; 50</fullName>
            </value>
            <value>
                <fullName>&gt; 5,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>