Agentforce/force-app/main/default/objects/Lead/fields/No_of_Events__c.field-meta.xml
<CustomField>
    <fullName>No_of_Events__c</fullName>
    <description># Events- Data dictionary Consolidation</description>
    <label># Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>