Agentforce/force-app/main/default/objects/Lead/fields/No_of_FOIs__c.field-meta.xml
<CustomField>
    <fullName>No_of_FOIs__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of FOIs populated through DLRS</description>
    <label># FOIs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>