Agentforce/force-app/main/default/objects/Lead/fields/No_of_Incumbents__c.field-meta.xml
<CustomField>
    <fullName>No_of_Incumbents__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Incumbents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>