Agentforce/force-app/main/default/objects/Lead/fields/No_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>No_of_Tasks__c</fullName>
    <description># Tasks- Data Dictionary consolidation</description>
    <label># Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>