Agentforce/force-app/main/default/objects/Lead/fields/No_of_Website_Visits__c.field-meta.xml
<CustomField>
    <fullName>No_of_Website_Visits__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by DLRS</description>
    <label># Website Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>