Agentforce/force-app/main/default/objects/Lead/fields/Not_At_Company__c.field-meta.xml
<CustomField>
    <fullName>Not_At_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not At Company- Data Dictionary Consolidation</description>
    <label>Not At Company</label>
    <type>Checkbox</type>
</CustomField>