Agentforce/force-app/main/default/objects/Lead/fields/NumberOfSites__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSites__c</fullName>
    <description>AD-29 Records how many sites a lead has</description>
    <label>Number of Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>