Agentforce/force-app/main/default/objects/Lead/fields/Opted_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_Date__c</fullName>
    <description>Date when the Lead opted out</description>
    <label>Opted Out Date</label>
    <type>Date</type>
</CustomField>