Agentforce/force-app/main/default/objects/Lead/fields/Original_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Data_Source__c</fullName>
    <description>Original Data Source- Data Dictionary Consolidation</description>
    <label>Original Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arthur McKay</fullName>
            </value>
            <value>
                <fullName>Catering Academy</fullName>
            </value>
            <value>
                <fullName>Nomination</fullName>
            </value>
            <value>
                <fullName>SugarCRM</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Atalian</fullName>
            </value>
            <value>
                <fullName>OCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>