Agentforce/force-app/main/default/objects/Lead/fields/Owner_Business_Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit_Text__c</fullName>
    <formula>TEXT(Owner:User.Business_Unit__c)</formula>
    <label>Owner Business Unit (Formula)</label>
    <type>Text</type>
</CustomField>