Agentforce/force-app/main/default/objects/Lead/fields/Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Owner_Company__c</fullName>
    <description>Owner Company- Data Dictionary Consolidation</description>
    <label>Owner Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OCS</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
            <value>
                <fullName>MidCity</fullName>
            </value>
            <value>
                <fullName>1M</fullName>
            </value>
            <value>
                <fullName>Aktrion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>