Agentforce/force-app/main/default/objects/Lead/fields/Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country__c</fullName>
    <description>Owner Country- Data Dictionary Consolidation</description>
    <label>Owner Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>