Agentforce/force-app/main/default/objects/Lead/fields/Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Full_Name__c</fullName>
    <formula>IF(
  Owned_by_Queue__c,
  Owner:Queue.QueueName,
  Owner:User.Full_Name__c
)</formula>
    <label>Owner Full Name</label>
    <type>Text</type>
</CustomField>