Agentforce/force-app/main/default/objects/Lead/fields/Owner_Region_Text__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region_Text__c</fullName>
    <formula>TEXT( Owner:User.Region__c )</formula>
    <label>Owner Region (Formula)</label>
    <type>Text</type>
</CustomField>