Agentforce/force-app/main/default/objects/Lead/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <description>Owner Team- Data Dictionary Consolidation</description>
    <label>Owner Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>