Agentforce/force-app/main/default/objects/Lead/fields/Primary_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Primary_Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-1012 - Represents the currently active Enquiry</description>
    <label>Primary Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>