Agentforce/force-app/main/default/objects/Lead/fields/Primary_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source__c</fullName>
    <description>AD-5 - values to identify where the Lead has been sourced</description>
    <label>Primary Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>