Agentforce/force-app/main/default/objects/Lead/fields/Ready_to_Send_Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Send_Email_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ready to Send Email Consent- Data Dictionary Consolidation</description>
    <label>Ready to Send Email Consent</label>
    <type>Checkbox</type>
</CustomField>