Agentforce/force-app/main/default/objects/Lead/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Field to capture the reference of the Lead - used to map to Opportunity upon conversion</description>
    <label>Reference</label>
    <length>122</length>
    <type>Text</type>
</CustomField>