Agentforce/force-app/main/default/objects/Lead/fields/Referrer_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Business_Unit__c</fullName>
    <label>Referrer Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Owner_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Business_Unit</valueSetName>
    </valueSet>
</CustomField>