Agentforce/force-app/main/default/objects/Lead/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <label>Referrer Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>