Agentforce/force-app/main/default/objects/Lead/fields/Revisit_Date__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Date__c</fullName>
    <description>AD-43 - date field to capture the date required for revisiting the lead</description>
    <label>Revisit Date</label>
    <type>Date</type>
</CustomField>