Agentforce/force-app/main/default/objects/Lead/fields/Revisit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Notes__c</fullName>
    <description>AD-43 - field to capture any notes associated with the Revisit Date</description>
    <label>Revisit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>