Agentforce/force-app/main/default/objects/Lead/fields/Revisit_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-892 - Validate that the Revisit Date Notification has been sent for this Lead</description>
    <label>Revisit Notification Sent</label>
    <type>Checkbox</type>
</CustomField>