Agentforce/force-app/main/default/objects/Lead/fields/Secondary_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source__c</fullName>
    <description>AD-6 - picklist to capture the secondary source of the Lead</description>
    <label>Secondary Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Secondary_Source</valueSetName>
    </valueSet>
</CustomField>