Agentforce/force-app/main/default/objects/Lead/fields/Send_Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Email Consent- Data Dictionary Consolidation</description>
    <label>Send Email Consent</label>
    <type>Checkbox</type>
</CustomField>